Increase height of side-nav to prevent content overflow Contents in the side navbar of docs were larger than the height of the navbar. This commit increases the height of the side-nav to account for this overflow

--- a/docs/_sass/_navbar.scss
+++ b/docs/_sass/_navbar.scss
@@ -62,7 +62,7 @@
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	max-height: 28em;
+	max-height: 45em;
 	width: 215px;
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
